--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ body {
 
 .header{ 
     position: absolute;
+    left: 0;
     margin: 2.5rem 0 0  2.5rem;
     width: 50%;
 }
@@ -135,6 +136,7 @@ body {
     font-size: 1.5rem;
     font-weight: 300;
     line-height: 150%;
+    text-align: center;
 
 }
 
@@ -164,8 +166,6 @@ footer{
     margin-right: 3%;
 }
 
-
-
 .boton__d:hover{
     background-color:#EFF1FA;
 }
@@ -179,10 +179,6 @@ footer{
 }
 
 @media (min-width: 1440px) {
-
-    .header{
-    left: 0;
-    }
 
     .main{
         width: 1440px;
@@ -244,17 +240,18 @@ footer{
 
 @media (max-width: 375px){
 
+    .header{
+        margin-left: -10%;
+    }
+
     .presentacion__ingreso__texto{
         width: auto;
-        height: 50%;
+        height: 60%;
     }
 
     .presentacion__botones__accion{
         display: flex;
         flex-direction: column;
-    }
-    .boton__d{
-        background-color: aqua;
     }
 }
 
